txtファイルに拡張子の情報を追加 string[1]に保存

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -78,4 +78,10 @@
     <data name="DeleteGame" xml:space="preserve">
         <value>削除</value>
     </data>
+    <data name="SelectFileLabel" xml:space="preserve">
+        <value>ファイルを選択</value>
+    </data>
+    <data name="SelectFileErrorMessage" xml:space="preserve">
+        <value>ファイルを選択してください(拡張子がないファイルを選択していませんか？)</value>
+    </data>
 </root>
