拡張子を表示する機能の追加 ファイルの画像を表示する機能の追加 Try記述を増加

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -84,4 +84,7 @@
     <data name="SelectFileErrorMessage" xml:space="preserve">
         <value>ファイルを選択してください(拡張子がないファイルを選択していませんか？)</value>
     </data>
+    <data name="ExtensionLabel" xml:space="preserve">
+        <value>拡張子: </value>
+    </data>
 </root>
