ジャンル別ソート機能追加

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -111,4 +111,13 @@
     <data name="NotContainsHttpError" xml:space="preserve">
         <value>適切なウェブアドレスを入力してください</value>
     </data>
+    <data name="GenreAllComboBoxItem" xml:space="preserve">
+        <value>すべて</value>
+    </data>
+    <data name="GenreExeExtension" xml:space="preserve">
+        <value>EXE ファイル</value>
+    </data>
+    <data name="GenreWebsiteExtension" xml:space="preserve">
+        <value>ウェブ</value>
+    </data>
 </root>
