メモ機能追加

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -120,4 +120,10 @@
     <data name="GenreWebsiteExtension" xml:space="preserve">
         <value>ウェブ</value>
     </data>
+    <data name="MemoCtxHeader" xml:space="preserve">
+        <value>メモ</value>
+    </data>
+    <data name="EditModeButton" xml:space="preserve">
+        <value>エディットモードにする</value>
+    </data>
 </root>
