ボタンのバグ修正 プロパティ機能追加

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -136,4 +136,13 @@
         <value>フォントサイズ
 </value>
     </data>
+    <data name="GenreWebGame" xml:space="preserve">
+        <value>ウェブゲーム</value>
+    </data>
+    <data name="PropertyCtxHeader" xml:space="preserve">
+        <value>プロパティ</value>
+    </data>
+    <data name="SimpleName" xml:space="preserve">
+        <value>名前</value>
+    </data>
 </root>
