--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -145,4 +145,19 @@
     <data name="SimpleName" xml:space="preserve">
         <value>名前</value>
     </data>
+    <data name="SimpleExePathLabel" xml:space="preserve">
+        <value>実行アプリケーション場所</value>
+    </data>
+    <data name="SimpleFileNotFound" xml:space="preserve">
+        <value>ファイルが見つかりません、プロパティーの実行アプリケーション場所を確認してください</value>
+    </data>
+    <data name="FileCantOpen" xml:space="preserve">
+        <value>このファイルは開けません</value>
+    </data>
+    <data name="SimpleAddress" xml:space="preserve">
+        <value>ウェブアドレス</value>
+    </data>
+    <data name="SimpleUseWebview" xml:space="preserve">
+        <value>ウェブビューを使う</value>
+    </data>
 </root>
