ウィンドウの利便性向上(1) + htmlオフライン保存機能追加
(1) = ウィンドウ全体がドラッグ可能だったのを上のドックだけに改良
Issue50(Windowでドラッグを使用してウィンドウサイズを最大化するとドラッグで戻せなくなるバグ)に対応

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -160,4 +160,10 @@
     <data name="SimpleUseWebview" xml:space="preserve">
         <value>ウェブビューを使う</value>
     </data>
+    <data name="WebSaver" xml:space="preserve">
+        <value>サイト保存</value>
+    </data>
+    <data name="GenreWebSaver" xml:space="preserve">
+        <value>サイト保存</value>
+    </data>
 </root>
