--- a/YuLauncher/LangString/Language.resx
+++ b/YuLauncher/LangString/Language.resx
@@ -156,4 +156,10 @@
     <data name="SimpleUseWebview" xml:space="preserve">
         <value>Using webview</value>
     </data>
+    <data name="WebSaver" xml:space="preserve">
+        <value>WebSaver</value>
+    </data>
+    <data name="GenreWebSaver" xml:space="preserve">
+        <value>WebSaver</value>
+    </data>
 </root>
