issue 70 issue 68 issue 67修正 or システム追加 完了

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -169,4 +169,7 @@
     <data name="AppLogButton" xml:space="preserve">
         <value>アプリケーションログ</value>
     </data>
+    <data name="MultipleLaunchText" xml:space="preserve">
+        <value>複数起動</value>
+    </data>
 </root>
