--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -295,4 +295,19 @@
   <data name="VideoGraphics" xml:space="preserve">
     <value>ビデオ/グラフィック/ディスプレイ</value>
   </data>
+  <data name="SimpleGeneral" xml:space="preserve">
+    <value>一般</value>
+  </data>
+  <data name="SimpleImport" xml:space="preserve">
+    <value>インポート</value>
+  </data>
+  <data name="SimpleAppData" xml:space="preserve">
+    <value>アプリケーションデータ</value>
+  </data>
+  <data name="SimpleExport" xml:space="preserve">
+    <value>エクスポート</value>
+  </data>
+  <data name="SimpleCompleted" xml:space="preserve">
+    <value>完了</value>
+  </data>
 </root>
