--- a/YuLauncher/LangString/Language.resx
+++ b/YuLauncher/LangString/Language.resx
@@ -291,4 +291,19 @@
   <data name="VideoGraphics" xml:space="preserve">
     <value>Video/Graphic/display</value>
   </data>
+  <data name="SimpleGeneral" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="SimpleImport" xml:space="preserve">
+    <value>Import</value>
+  </data>
+  <data name="SimpleAppData" xml:space="preserve">
+    <value>AppData</value>
+  </data>
+  <data name="SimpleExport" xml:space="preserve">
+    <value>Export</value>
+  </data>
+  <data name="SimpleCompleted" xml:space="preserve">
+    <value>Complated</value>
+  </data>
 </root>
