動画でのみ音量を変えられる機能追加

--- a/YuLauncher/LangString/Language.ja-JP.resx
+++ b/YuLauncher/LangString/Language.ja-JP.resx
@@ -310,4 +310,7 @@
   <data name="SimpleCompleted" xml:space="preserve">
     <value>完了</value>
   </data>
+  <data name="SimpleVolume" xml:space="preserve">
+    <value>ボリューム</value>
+  </data>
 </root>
