--- a/YuLauncher/LangString/Language.resx
+++ b/YuLauncher/LangString/Language.resx
@@ -309,4 +309,10 @@
   <data name="SimpleVolume" xml:space="preserve">
     <value>Volume</value>
   </data>
+  <data name="SimpleApplication" xml:space="preserve">
+    <value>Application</value>
+  </data>
+  <data name="SimpleBrowser" xml:space="preserve">
+    <value>Browser</value>
+  </data>
 </root>
